# python-sf-toolkit

./: .gitignore  .pytest.ini  .readthedocs.yaml  CHANGELOG-template.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  sandbox.py
.github/workflows/: docs.yml  pypi-publish.yml  tests.yml
docs/source/: advanced.rst  api_reference.rst  async.rst  auth.rst  blobfield.rst  bulk_api.rst  client.rst  conf.py  index.rst  installation.rst  metadata.rst  query.rst  quickstart.rst  sobjects.rst
examples/: freeze_users.py  list_users.py  nested_query copy.py  nested_query.py  unfreeze_active_users.py  unfreeze_active_users_async.py  unfreeze_active_users_sync.py
scripts/: build_docs.sh
src/salesforce_toolkit/: __init__.py  _models.py  apimodels.py  auth.py  client.py  concurrency.py  exceptions.py  interfaces.py  metrics.py  protocols.py
src/sf_toolkit/: __init__.py  _models.py  apimodels.py  auth.py  client.py  concurrency.py  formatting.py  interfaces.py  logger.py  metrics.py  session.py
tests/: conftest.py  test__models.py  test_apimodels.py  test_async_utils.py  test_auth_cli.py  test_auth_httpx.py  test_auth_lazy_login.py  test_auth_oauth.py  test_auth_soap.py  test_client.py  test_concurrency.py  test_exceptions.py  test_formatting.py  test_init.py  test_io.py  test_logger.py  test_metrics.py  test_models.py  test_query.py  test_sobject.py  test_sobject_list.py  unit_test_models.py
tests/auth/: test_auth_cli.py  test_auth_httpx.py  test_auth_soap.py
tests/data/: test_bulk.py  test_query.py  test_sobject.py  test_sobject_blob.py  test_sobject_list.py  (+1 more)
(+33 files in other folders)
