[tool.poetry]
name = "sf-toolkit"
version = "0.1.0"
description = "A Salesforce API Adapter for Python"
authors = ["David Culbreth <david.culbreth.256@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
jwt = "^1.3.1"
lxml = "^5.3.1"
ruff = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
